@@ -618,18 +618,32 @@ class FeedsCSVtoUsersTest extends FeedsWebTestCase {
     );
     $this->drupalPost('admin/build/feeds/edit/user_import/settings', $edit, 'Save');
 
+    // Create roles and assign one of them to the users to be imported.
+    $manager_rid = $this->drupalCreateRole(array('access content'), 'manager');
+    $admin_rid = $this->drupalCreateRole(array('access content'), 'administrator');
+    $edit = array(
+      "roles[$manager_rid]" => TRUE,
+      "roles[$admin_rid]" => FALSE,
+    );
+    $this->setSettings('user_import', 'FeedsUserProcessor', $edit);
+
     // Import CSV file.
     $this->importFile('user_import', $this->absolutePath() .'/tests/feeds/users.csv');
 
     // Assert result.
     $this->assertText('Created 4 users.');
-    // 1 user has an invalid email address.
+    // 1 user has an invalid email address, all users should be assigned
+    // the manager role.
     $this->assertText('There was 1 user that could not be imported because either their name or their email was empty or not valid. Check import data and mapping settings on User processor.');
     $this->drupalGet('admin/user/user');
     $this->assertText('Morticia');
     $this->assertText('Fester');
     $this->assertText('Gomez');
     $this->assertText('Pugsley');
+    $count = db_result(db_query("SELECT count(*) FROM {users_roles} WHERE rid = %d", $manager_rid));
+    $this->assertEqual($count, 4, t('All imported users were assigned the manager role.'));
+    $count = db_result(db_query("SELECT count(*) FROM {users_roles} WHERE rid = %d", $admin_rid));
+    $this->assertEqual($count, 0, t('No imported user was assigned the administrator role.'));
 
     // @todo Test status setting, update existing and role settings.
   }
