@@ -3,6 +3,7 @@
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #854628 DanielJohnston, alex_b: Fix user importer assigns all roles.
 - #838018 infojunkie: Mapper for Formatted Number CCK field.
 - #856408 c.ex: Pass all $targets for hook_feeds_node_processor_targets_alter()
   by reference.
